# yggdraphitecho

./: .env.personal_studio  .gitignore  .gitpod.yml  .replit  2DO_ASSESSMENT.md  2DO_PROGRESS_UPDATE.md  2DO_TO_1DONE_SUMMARY.md  ANALYSIS_COMPLETION_SUMMARY.md  ANALYSIS_INDEX.md  ANALYSIS_QUICK_REFERENCE.md  CMakeLists.txt  COGNITIVE_ARCHITECTURE_VISUAL_ANALYSIS.md  CONTRIBUTING.md  CURRENT_STATUS_ANALYSIS.md  DEEP_TREE_ECHO_COGNITIVE_ARCHITECTURE_EVALUATION.md  GETTING_STARTED.md  GRAND_CELEBRATION.md  GRAND_UNVEILING_CELEBRATION.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MISSION_ACCOMPLISHED_SUMMARY.md  MISSION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PHASE_5_2_OPTIMIZATION_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REPOSITORY_IMPROVEMENT_REPORT.md  SECRET_FEATURE_QUANTUM_HYPERGRAPH.md  SECRET_FEATURE_SENAS.md  SELF-ASSESSMENT.md  TESTING_AND_DEPLOYMENT_GUIDE.md  WISDOM_INTEGRATION_ROADMAP.md  analysis_report.json  analysis_script.py  build.sh  config.example.yaml  demo_deep_tree_echo_interactive.py  fix_script.py  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json  init-xserver.sh  post-create.sh  post-start.sh
.github/: copilot-instructions.md
.github/agents/: deep-tree-echo.md
.github/chatmodes/: Aphrodite.chatmode.md
.github/config/: self-healing-config.yaml
.github/workflows/: build-engine-optim.yml  disk-space-investigation.yml
1done/: README.md
1done/paphos-backend/: API.md  CHANGELOG.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_START.md
2do/paphos-backend/: EXAMPLES.md  README.md  ROUTES.md
aphrodite/distributed/: __init__.py
aphrodite/quantization/: hadamard.safetensors
cmake/: __init__.py  utils.cmake
cmake/external_project/: vllm_flash_attn.cmake
cognitive_architectures/: __init__.py
echo.dash/: __init__.py
echo.dream/: __init__.py
echo.files/: __init__.py  echo-kern-makefile.cmake  echo_kern_stage0_makefile.cmake
echo.kern/: Makefile  performance_integration.py
echo.self/: __init__.py
examples/fp8/: __init__.py
examples/marlin/: __init__.py
examples/offline_inference/: __init__.py
examples/openai_api/: __init__.py
functions/tools/: execute_command.sh  fs_list.sh  fs_read.sh  fs_write.sh  get_current_time.sh
kernels/cutlass_extensions/: __init__.py
kernels/hadamard/: __init__.py
requirements/: build.txt
src/: main.cpp
src/agent/: agent.cpp  agent.h  agent_executor.cpp  agent_executor.h
src/cli/: args.cpp  args.h  commands.cpp  commands.h  repl.cpp  repl.h
src/config/: config.cpp  config.h  yaml_parser.cpp  yaml_parser.h
src/functions/: json_schema.cpp  json_schema.h  tool_executor.cpp  tool_executor.h  tool_manager.cpp  tool_manager.h
src/inference/: chat.cpp  chat.h  embeddings.cpp  embeddings.h  engine.cpp  engine.h
src/rag/: chunker.cpp  chunker.h  embedder.cpp  embedder.h  vector_store.cpp  vector_store.h
src/render/: highlighter.cpp  highlighter.h  terminal.cpp  terminal.h
src/session/: session.cpp  session.h  storage.cpp  storage.h
src/utils/: file_utils.cpp  file_utils.h  json.cpp  json.h  logger.cpp  logger.h  markdown.cpp  markdown.h  string_utils.cpp  string_utils.h
tests/endpoints/: test_deep_tree_echo_comprehensive.py
yggdrasil_integration/: README.md
yggdrasil_integration/bridge/: README.md  aphrodite_bridge.py  aphrodite_induction_engine.py
yggdrasil_integration/core/: README.md  yggdrasil_atomspace.py
yggdrasil_integration/dtesn/: __init__.py  butcher_series.py  deep_tree_echo_network.py  electromagnetic_dynamics.py
yggdrasil_integration/examples/: arc_halo_db_example.py
yggdrasil_integration/fusion/: README.md  arc_halo_db_integration.py  arc_halo_em_fusion_core.py  arc_halo_fusion_core.py
yggdrasil_integration/membranes/: README.md  agentic_decision_forest.py  yggdrasil_membrane.py
yggdrasil_integration/plingua/: __init__.py  ennead_triadic_autogenesis.py  plingua_membrane_bridge.py  plingua_parser.py  relevance_realization_ennead.py
yggdrasil_integration/rros/: __init__.py  (+4 more)
(+74 files in other folders)
